@@ -40,6 +40,8 @@ Object internalForkEx(VM* theVM, int argc, const Object* argv);
 Object internalWaitpidEx(VM* theVM, int argc, const Object* argv);
 Object internalExecEx(VM* theVM, int argc, const Object* argv);
 Object internalPipeEx(VM* theVM, int argc, const Object* argv);
+Object currentDirectoryEx(VM* theVM, int argc, const Object* argv);
+Object setCurrentDirectoryDEx(VM* theVM, int argc, const Object* argv);
 
 }; // namespace scheme
 
