@@ -990,6 +990,9 @@
     (%fork interaction sys)
     (%waitpid interaction sys)
     (%spawn interaction sys)
+    (current-directory interaction sys mosh)
+    (expand-path interaction sys mosh)
+    (set-current-directory! interaction sys mosh)
     (readdir sys)
     (microseconds sys)
     (local-tz-offset sys)
@@ -1006,7 +1009,7 @@
     (file->string mosh-file mosh)
     (file->list mosh-file mosh)
     (write-to-file mosh-file mosh)
-    (current-directory mosh-file mosh)
+;    (current-directory mosh-file mosh)
     (stat-mtime mosh-file mosh)
     (file-newer? mosh-file mosh)
     (standard-library-path mosh)
